@@ -1,13 +1,17 @@
 0.95a	Fixed problem with global map variables. Oops.
+	Fixed a few deprecated function references.
+	Fixed a couple of tiny docs errors.
+	Added in a SCALE line in the DEFAULT scale for between 0 and 1. Stops a lot of warnings on low-traffic links.
 
 0.95	KNOWN ISSUE - ININFOURL/OUTINFOURL, INOVERLIBGRAPH/OUTOVERLIBGRAPH are not handled well by the editor. If you edit a map that uses these, 
 		then the 'in' side of the link will be copied to the 'out' side. New editor will handle this better.
 	
+	ADDED - you get a warning if you are using values outside of the defined SCALE now.
 	ADDED - You can add a 'tag' to a SCALE line, to be used in ICON or LABELs later.
     ADDED - USEICONSCALE - colorize icon images (based on patches from llow)
 	ADDED - screenshot mode. "SET screenshot_mode 1" at the top of the map will anonymise all labels, comments and bwlabels.
 	ADDED - LABELFONTCOLOR can use a special value of 'contrast' to always contrast with the label colour.
-	ADED - Artificial Icons. Special icon 'filenames' - 'box' 'round' 'rbox' create a shaped icon without any file.
+	ADDED - Artificial Icons. Special icon 'filenames' - 'box' 'round' 'rbox' create a shaped icon without any file.
 	ADDED - Map titles show up in browser title now.
 	ADDED - a basic 'live view' function which generates a map on demand. Sometimes. It's not very useful.
 	ADDED - LABELANGLE allows you to rotate node labels to 90,180,270 degrees. Needs truetype font.
